# test_timer

./: README.md  README.rst  pyproject.toml  setup.cfg
tests/: test_test_timer.py
