[metadata]
name = test-timer-package
version = 0.0.1
author = mnazrul.c@gmail.com
author_email = mnazrul.c@gmail.com
description = Package to check run time while unit testing
long_description = file: README.rst
url = https://github.com/mnislam01/test_timer
project_urls =
    Bug Tracker = https://github.com/mnislam01/test_timer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = test_timer
packages = find:
python_requires = >=3.6

[options.packages.find]
where = test_timer
